# nugget-protocol-lsms

./: .gitmodules  README.md  plot.ipynb
cbuild/: lsms-ir-bb-analysis-with-lib-bc-cmake.err  lsms-ir-bb-analysis-with-lib-bc-compile.err  lsms-ir-bb-analysis-with-lib-exe-cmake.err  lsms-ir-bb-analysis-without-lib-bc-cmake.err  lsms-ir-bb-analysis-without-lib-bc-compile.err  lsms-ir-bb-analysis-without-lib-exe-cmake.err  lsms-ir-bb-analysis-without-lib-exe-compile.err  papi-naive-bc-cmake.err  papi-naive-bc-compile.err  saphir-papi-nuggets-bc-cmake.err  saphir-papi-nuggets-bc-compile.err  saphir-papi-nuggets-exe-cmake.err  saphir-papi-nuggets-exe-compile.err
cbuild/bb-info-output/: basic-block-info.txt
cbuild/saphir_papi_nuggets_bc-bb-info-output/: 6740
experiments/cmake/: base_config.cmake
experiments/info/: check-diff.py  get-analysis-info.py  k-means-selection.py  random-selection.py
experiments/ir-bb-analysis/: i_lsms  i_lsms_restart  i_lsms_start  k.out_reference  q_lsms  q_lsms_restart  run-lsms-summitdev.sh  saphir-run-experiment.py  set_device_and_bind.sh  v_fept.0  v_fept.1
experiments/papi-naive/: failed_list.txt  saphir-run-experiment.py  summer-run-experiment.py
experiments/papi-nuggets/: saphir-run-experiment.py  summer-run-experiment.py
experiments/random-selection-nuggets/: saphir-run-experiments.py  summer-run-experiments.py
experiments/test-papi/: CMakeLists.txt  hello.c
util/: get_marker_PC.py
util/github/: package-all-files-larger-than-100.py  unpack.py
utils/github/: pack_up.py  packaged_files.json  unpack.py
(+11947 files in other folders)
